Docker compose now actually runs the cluster

--- a/dockers/commander/Dockerfile
+++ b/dockers/commander/Dockerfile
@@ -1,3 +1,4 @@
 FROM yarbelk/todo-base
 ENV PATH $GOPATH/src/github.com/yarbelk/todo:$PATH
-CMD command-srv
+COPY run-commander.sh .
+CMD /bin/sh run-commander.sh
