--- a/dockers/query/Dockerfile
+++ b/dockers/query/Dockerfile
@@ -1,3 +1,4 @@
 FROM yarbelk/todo-base
 ENV PATH $GOPATH/src/github.com/yarbelk/todo:$PATH
-CMD query-srv
+COPY run-query.sh .
+CMD /bin/sh run-query.sh
