--- a/dockers/logstash/Dockerfile
+++ b/dockers/logstash/Dockerfile
@@ -1,4 +1,6 @@
 FROM logstash:latest
+RUN logstash-plugin install logstash-input-syslog
+RUN logstash-plugin install logstash-codec-json
 
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json 
